--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/* INDEX */
-
-.categories-title {
-  text-align:center;
-  margin: 20px 0px 20px 0px;
-}
-
 /* NAVBAR */
 .menu-navbar a {
     text-decoration: none !important;
@@ -21,8 +14,17 @@ margin-top:75%;
 
 /* CATEGORIES */
 
+.categories-title {
+  text-align:center;
+  margin: 20px 0px 20px 0px;
+}
+
 .button-col {
     padding:20px;
+}
+
+.categories-buttons {
+text-align: center;
 }
 
 .button-category{
